--- a/argus-frontend/src/main/resources/public/index.html
+++ b/argus-frontend/src/main/resources/public/index.html
@@ -13,6 +13,7 @@
             <h1>Argus</h1>
         </div>
         <div class="header-actions">
+            <button id="thread-dump-btn" class="btn" title="Capture Thread Dump">Thread Dump</button>
             <button id="help-btn" class="btn btn-icon" title="Help">?</button>
             <div id="connection-status" class="status disconnected">
                 <span class="status-dot"></span>
@@ -89,6 +90,69 @@
             </div>
         </section>
     </main>
+
+    <!-- Thread Detail Modal -->
+    <div id="thread-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content thread-detail-modal">
+            <div class="modal-header">
+                <h2>Thread Details</h2>
+                <button class="modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="thread-detail-header">
+                    <div class="thread-detail-name" id="modal-thread-name">-</div>
+                    <div class="thread-detail-id">ID: <span id="modal-thread-id">-</span></div>
+                </div>
+                <div class="thread-detail-stats">
+                    <div class="thread-stat">
+                        <span class="thread-stat-label">Status</span>
+                        <span class="thread-stat-value" id="modal-thread-status">-</span>
+                    </div>
+                    <div class="thread-stat">
+                        <span class="thread-stat-label">Duration</span>
+                        <span class="thread-stat-value" id="modal-thread-duration">-</span>
+                    </div>
+                    <div class="thread-stat">
+                        <span class="thread-stat-label">Events</span>
+                        <span class="thread-stat-value" id="modal-event-count">-</span>
+                    </div>
+                </div>
+                <div class="thread-events-section">
+                    <h3>Event Timeline</h3>
+                    <div id="modal-events-list" class="thread-events-list">
+                        <div class="loading">Loading events...</div>
+                    </div>
+                </div>
+                <div class="thread-dump-action">
+                    <button id="modal-dump-btn" class="btn btn-primary">Capture Stack Trace</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Dump View Modal -->
+    <div id="dump-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content dump-view-modal">
+            <div class="modal-header">
+                <h2 id="dump-modal-title">Thread Dump</h2>
+                <button class="modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="dump-info">
+                    <span id="dump-timestamp">-</span>
+                    <span id="dump-thread-count">-</span>
+                </div>
+                <div class="dump-actions">
+                    <button id="dump-copy-btn" class="btn">Copy to Clipboard</button>
+                </div>
+                <div class="dump-content">
+                    <pre id="dump-output">Loading...</pre>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Help Modal -->
     <div id="help-modal" class="modal hidden">
