--- a/argus-frontend/src/main/resources/public/index.html
+++ b/argus-frontend/src/main/resources/public/index.html
@@ -81,6 +81,21 @@
             </div>
         </section>
 
+        <!-- Pinning Hotspots Section -->
+        <section id="hotspots-section" class="hotspots-section">
+            <div class="section-header">
+                <h2>Pinning Hotspots</h2>
+                <button id="refresh-hotspots" class="btn btn-small">Refresh</button>
+            </div>
+            <div class="hotspots-summary">
+                <span>Total Pinned: <strong id="hotspots-total">0</strong></span>
+                <span>Unique Locations: <strong id="hotspots-unique">0</strong></span>
+            </div>
+            <div id="hotspots-list" class="hotspots-list">
+                <div class="empty-state">No pinning events detected yet</div>
+            </div>
+        </section>
+
         <!-- Pinned Alerts Section -->
         <section id="pinned-section" class="pinned-section hidden">
             <div class="section-header">
