refactor :: argus dashboard

--- a/argus-frontend/src/main/resources/public/index.html
+++ b/argus-frontend/src/main/resources/public/index.html
@@ -257,6 +257,6 @@
         <p>Argus Virtual Thread Profiler - Real-time JFR Event Monitoring</p>
     </footer>
 
-    <script src="/js/app.js"></script>
+    <script type="module" src="/js/app.js"></script>
 </body>
 </html>
